--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~44.0.0",
+    "expo-font": "^10.0.5",
+    "expo-localization": "^12.0.1",
     "expo-status-bar": "~1.2.0",
+    "i18n-js": "^3.9.2",
+    "native-base": "^3.4.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
