--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "expo": "~44.0.0",
+    "expo": "^44.0.6",
     "expo-font": "^10.0.5",
     "expo-localization": "^12.0.1",
     "expo-status-bar": "~1.2.0",
