--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "^44.0.6",
@@ -21,16 +22,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-cards-swipe": "^1.2.1",
     "react-native-countdown-component": "^2.7.1",
-    "react-native-gesture-handler": "^2.4.1",
-    "react-native-reanimated": "^2.8.0",
-    "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
     "react-spring": "^8.0.27"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21"
   },
   "private": true
 }
