--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native": "0.64.3",
     "react-native-countdown-component": "^2.7.1",
     "react-native-web": "0.17.1",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "expo-updates": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
