--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "react-native-spy-game",
+    "name": "Spy",
     "slug": "Spy-Game",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,18 +13,18 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.chatalCity.spyGame"
     },
     "android": {
+      "versionCode": 1,
+      "package": "com.chatalCity.spyGame",
       "adaptiveIcon": {
         "foregroundImage": "./assets/icons/adaptive-icon.png",
         "backgroundColor": "#000000"
-      },
-      "package": "com.spy.game"
+      }
     },
     "web": {
       "favicon": "./assets/icons/favicon.png"
