--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-font": "^10.0.5",
     "expo-localization": "^12.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "i18n-js": "^3.9.2",
     "native-base": "^3.4.3",
     "react": "17.0.1",
@@ -24,8 +25,7 @@
     "react-native": "0.64.3",
     "react-native-countdown-component": "^2.7.1",
     "react-native-web": "0.17.1",
-    "react-spring": "^8.0.27",
-    "expo-updates": "~0.11.7"
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
